force-app/main/default/objects/Lead_Distribution_Log__c/Lead_Distribution_Log__c.object-meta.xml
<CustomObject>
    <label>Lead Distribution Log</label>
    <nameField>
        <label>Lead Distribution Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Distribution Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>