force-app/main/default/objects/Lead_Distribution_Log__c/fields/Assigned_On__c.field-meta.xml
<CustomField>
    <fullName>Assigned_On__c</fullName>
    <description>Date and time when the lead was assigned.</description>
    <label>Assigned On</label>
    <type>DateTime</type>
</CustomField>