force-app/main/default/objects/Lead_Distribution_Log__c/fields/Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User assigned to work the distributed lead.</description>
    <label>Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lead_Distribution_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>