force-app/main/default/objects/Lead_Distribution_Log__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead processed by the distribution rule.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Distribution_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>