force-app/main/default/objects/Lead_Distribution_Log__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner account selected for the lead assignment.</description>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Lead_Distribution_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>