force-app/main/default/objects/Lead_Distribution_Log__c/fields/Rule_Key__c.field-meta.xml
<CustomField>
    <fullName>Rule_Key__c</fullName>
    <description>Rule key used to assign the lead.</description>
    <label>Rule Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>